--- a/style.css
+++ b/style.css
@@ -215,6 +215,8 @@ div#topico_06{
     display: block;
     margin-left: 0px;
     margin-right: auto;
+    margin-bottom: 150px;
+
 }
 
 div#topico07{
@@ -232,7 +234,7 @@ div#topico07{
 
 
     margin-left: 950px;
-    margin-top: -1850px;
+    margin-top: -1900px;
 }
 
 
